[svn r1147] (BNK)Projekt auf UTF-8 konvertiert

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Sep 12 09:20:13 CEST 2005
-encoding/<project>=ISO-8859-1
+#Tue Feb 23 19:29:20 CET 2010
 eclipse.preferences.version=1
+encoding/<project>=UTF-8
