--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,14 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<version>1.0.0-SNAPSHOT</version>
 	<name>UNOHelper</name>
 	<url>https://github.com/WollMux/UNOHelper</url>
-	
+
 	<properties>
 		<libreoffice.version>4.1</libreoffice.version>
 	</properties>
+
+	<scm>
+		<developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
+	</scm>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -43,7 +47,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 			<groupId>de.muenchen</groupId>
 			<artifactId>classes</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.libreoffice</groupId>
