--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<dependencies>
 		<dependency>
 			<groupId>de.muenchen</groupId>
-			<artifactId>classes</artifactId>
-			<version>1.0.0</version>
+			<artifactId>wollmux-support-classes</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.libreoffice</groupId>
