--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,19 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<scm>
 		<developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
 	</scm>
+	
+	<distributionManagement>
+		<repository>
+			<id>release</id>
+			<name>kvm-javabuild-release</name>
+			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-release-local</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>kvm-javabuild-snapshots</name>
+			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-snapshot-local</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -81,7 +94,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 			<groupId>de.muenchen</groupId>
 			<artifactId>wollmux-support-classes</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.libreoffice</groupId>
