--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
 
 	<properties>
 		<libreoffice.version>4.1</libreoffice.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<scm>
-		<developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
+  <scm>
+    <developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
 	  <tag>HEAD</tag>
   </scm>
 	
@@ -43,8 +44,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
