--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.muenchen</groupId>
 	<artifactId>unohelper</artifactId>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<name>UNOHelper</name>
 	<url>https://github.com/WollMux/UNOHelper</url>
 
 	<properties>
-		<libreoffice.version>6.1.5</libreoffice.version>
+		<libreoffice.version>6.4.0-SNAPSHOT</libreoffice.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
