--- a/pom.xml
+++ b/pom.xml
@@ -1,124 +1,115 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.muenchen</groupId>
-	<artifactId>unohelper</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
-	<name>UNOHelper</name>
-	<url>https://github.com/WollMux/UNOHelper</url>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>de.muenchen</groupId>
+  <artifactId>unohelper</artifactId>
+  <version>3.0.0-SNAPSHOT</version>
+  <name>UNOHelper</name>
+  <url>https://github.com/WollMux/UNOHelper</url>
 
-	<properties>
-		<libreoffice.version>6.4.0-SNAPSHOT</libreoffice.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+  <properties>
+    <libreoffice.version>6.4.0-SNAPSHOT</libreoffice.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.javadoc.failOnWarnings>false</maven.javadoc.failOnWarnings>
+  </properties>
 
-	<scm>
-		<developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+  <scm>
+    <developerConnection>scm:git:https://github.com/WollMux/UNOHelper.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
-	<distributionManagement>
-		<repository>
-			<id>release</id>
-			<name>kvm-javabuild-release</name>
-			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-release-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>kvm-javabuild-snapshots</name>
-			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>release</id>
+      <name>kvm-javabuild-release</name>
+      <url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-release-local</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>kvm-javabuild-snapshots</name>
+      <url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+  </distributionManagement>
 
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>src</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.1</version>
-				<configuration>
-					<failOnError>false</failOnError>
-					<additionalparam>-Xdoclint:none</additionalparam>
-					<additionalOptions>
-						<additionalOption>-Xdoclint:none</additionalOption>
-					</additionalOptions>
-				</configuration>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>3.0.0-M1</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-			</plugin>
-		</plugins>
-	</build>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <additionalparam>-Xdoclint:none</additionalparam>
+          <additionalOptions>
+            <additionalOption>-Xdoclint:none</additionalOption>
+          </additionalOptions>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.0.0-M1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.libreoffice</groupId>
-			<artifactId>ridl</artifactId>
-			<version>${libreoffice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.libreoffice</groupId>
-			<artifactId>juh</artifactId>
-			<version>${libreoffice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.libreoffice</groupId>
-			<artifactId>jurt</artifactId>
-			<version>${libreoffice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.libreoffice</groupId>
-			<artifactId>unoil</artifactId>
-			<version>${libreoffice.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.8.1</version>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.libreoffice</groupId>
+      <artifactId>ridl</artifactId>
+      <version>${libreoffice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.libreoffice</groupId>
+      <artifactId>juh</artifactId>
+      <version>${libreoffice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.libreoffice</groupId>
+      <artifactId>jurt</artifactId>
+      <version>${libreoffice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.libreoffice</groupId>
+      <artifactId>unoil</artifactId>
+      <version>${libreoffice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
+  </dependencies>
 </project>
