--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <url>https://github.com/WollMux/UNOHelper</url>
 
   <properties>
-    <libreoffice.version>6.4.0-SNAPSHOT</libreoffice.version>
+    <libreoffice.version>6.4.3</libreoffice.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
