--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
           <execution>
             <id>attach-sources</id>
             <goals>
-              <goal>jar</goal>
+              <goal>jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
@@ -74,7 +74,7 @@
         </configuration>
         <executions>
           <execution>
-            <id>attach-sources</id>
+            <id>attach-javadocs</id>
             <goals>
               <goal>jar</goal>
             </goals>
