--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,35 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.0.0</version>
+        <configuration>
+          <licenseName>eupl_v1_1</licenseName>
+          <roots>
+            <root>src/main</root>
+            <root>src/test</root>
+          </roots>
+          <extraExtensions><idl>java</idl></extraExtensions>
+          <inceptionYear>2005</inceptionYear>
+          <organizationName>Landeshauptstadt München</organizationName>
+          <trimHeaderLine>true</trimHeaderLine>
+          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+          <canUpdateCopyright>true</canUpdateCopyright>
+          <failOnMissingHeader>true</failOnMissingHeader>
+          <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
+        </configuration>
+        <executions>
+          <execution>
+            <id>first</id>
+            <goals>
+              <goal>update-file-header</goal>
+            </goals>
+            <phase>process-sources</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.0.1</version>
