--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,10 @@
       <artifactId>guava</artifactId>
       <version>29.0-jre</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.14.3</version>
+    </dependency>
   </dependencies>
 </project>
