--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Mon Jan 23 15:38:25 CET 2023
+#Mon Jan 23 15:53:00 CET 2023
 completedPhase=end-release
 exec.snapshotReleasePluginAllowed=false
-preparationGoals=clean verify javadoc:javadoc
+preparationGoals=clean verify
 project.dev.org.libreoffice.ext\:unohelper=5.0.1-SNAPSHOT
 project.rel.org.libreoffice.ext\:unohelper=5.0.0
 project.scm.org.libreoffice.ext\:unohelper.developerConnection=scm\:git\:git@github.com\:LibreOffice/UNOHelper.git
