--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.libreoffice.ext</groupId>
   <artifactId>unohelper</artifactId>
-  <version>5.0.2</version>
+  <version>5.0.3-SNAPSHOT</version>
   <name>UNOHelper</name>
   <description>Simple, no overhead Java wrapper for the LibreOffice UNO API</description>
   <url>https://github.com/LibreOffice/UNOHelper</url>
@@ -26,7 +26,7 @@
   <scm>
     <developerConnection>scm:git:git@github.com:LibreOffice/UNOHelper.git</developerConnection>
     <url>https://github.com/LibreOffice/UNOHelper</url>
-    <tag>unohelper-5.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
